plugins {
    id 'java-library'
}

java.toolchain.languageVersion = JavaLanguageVersion.of(21)

tasks.withType(JavaCompile).configureEach {
    options.compilerArgs.add('--enable-preview')
    options.compilerArgs += ['--add-modules', 'jdk.incubator.vector']
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.jocl:jocl:2.0.5'
}
